read me e alterações finais para a api

--- a/src/view/brinquedos.ejs
+++ b/src/view/brinquedos.ejs
@@ -9,6 +9,9 @@
     <<div class="">
       <br /><br /><br />
       <h2>Brinquedos</h2>
+      <script type='text/javascript'>
+        var linhas = <%-JSON.stringify(r)%>
+      </script>
     </div>
   </body>
 </html>
