tentativa de criar views

--- a/views/compras.ejs
+++ b/views/compras.ejs
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title></title>
+    <title>Compras</title>
   </head>
   <body>
-    <<div class="">
+    <div class="">
+      <h2>Compras</h2>
       <br /><br /><br />
-      <h2>Usuários</h2>
     </div>
   </body>
 </html>
