--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -3,15 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title></title>
+    <title>Compras</title>
   </head>
   <body>
-    <<div class="">
+    <div class="">
+      <h2>Usuários</h2>
       <br /><br /><br />
-      <h2>Brinquedos</h2>
-      <script type='text/javascript'>
-        var linhas = <%-JSON.stringify(r)%>
-      </script>
     </div>
   </body>
 </html>
